--- a/the-one-file-homelab-demo.html
+++ b/the-one-file-homelab-demo.html
@@ -1199,7 +1199,7 @@
 
       <div class="topology-toolbar" id="topology-toolbar" style="display: none;">
         <label for="add-line-select">Add line to:</label>
-        <select id="add-line-select"><option value="wew">wew</option></select>
+        <select id="add-line-select"><option value=""></option></select>
         <input type="color" id="add-line-color" value="#475569" title="Line color" style="width:30px; height:24px; border:1px solid var(--edge-main); border-radius:4px; cursor:pointer; background:transparent; padding:0;">
         <select id="add-line-direction" title="Line direction">
           <option value="none">No arrows</option>
@@ -1236,13 +1236,11 @@
 
     <aside class="details-panel" id="details-panel">
 
-      <button class="sidebar-toggle" id="sidebar-toggle" title="Toggle sidebar">◀</button>
-
       <div id="node-panel" style="display: none;">
-        <div class="details-name editable-text" id="node-name">wewew</div>
-        <div class="details-ip editable-text" id="node-ip">wew</div>
+        <div class="details-name editable-text" id="node-name"></div>
+        <div class="details-ip editable-text" id="node-ip"></div>
         <div class="details-role" id="node-role"></div>
-        <div class="badge-row" id="node-tags"><span class="badge" style="cursor: pointer; position: relative;"><span>wew</span><span style="opacity: 0.6; margin-left: 4px; font-size: 10px;"> ✕</span></span><span class="badge" style="cursor: pointer; opacity: 0.6; border-style: dashed;">+ Add</span></div>
+        <div class="badge-row" id="node-tags"><span class="badge" style="cursor: pointer; position: relative;"><span></span><span style="opacity: 0.6; margin-left: 4px; font-size: 10px;"> ✕</span></span><span class="badge" style="cursor: pointer; opacity: 0.6; border-style: dashed;">+ Add</span></div>
 
         <div class="size-controls">
           <label>Size:</label>
