--- a/the-one-file.html
+++ b/the-one-file.html
@@ -1200,7 +1200,7 @@
 
       <div class="topology-toolbar" id="topology-toolbar" style="display: none;">
         <label for="add-line-select">Add line to:</label>
-        <select id="add-line-select"><option value="wew">wew</option></select>
+        <select id="add-line-select"><option value=""></option></select>
         <input type="color" id="add-line-color" value="#475569" title="Line color" style="width:30px; height:24px; border:1px solid var(--edge-main); border-radius:4px; cursor:pointer; background:transparent; padding:0;">
         <select id="add-line-direction" title="Line direction">
           <option value="none">No arrows</option>
@@ -1236,9 +1236,7 @@
     </section>
 
     <aside class="details-panel" id="details-panel">
-
-      <button class="sidebar-toggle" id="sidebar-toggle" title="Toggle sidebar">◀</button>
-
+	
       <div id="node-panel" style="display: none;">
         <div class="details-name editable-text" id="node-name"></div>
         <div class="details-ip editable-text" id="node-ip"></div>
