--- a/demos/the-one-file-corporate-demo.html
+++ b/demos/the-one-file-corporate-demo.html
@@ -20,14 +20,14 @@
   <title>The One File</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- 
-         * ==================================================================================
+         * ====================================================================================
          * THE ONE FILE
-         * "There can be only one". A all in one file topology maker.
+         * "There can be only one". A all in one file topology maker for enterprise or homelab
          * 
          * This is your last backup when all others fail. A completely self-contained
          * network topology visualization tool that works as a single HTML file.
          * Open it anywhere, anytime and the idea lives forever.
-         * ==================================================================================
+         * ====================================================================================
          -->
   <style>
    :root {
