--- a/the-one-file.html
+++ b/the-one-file.html
@@ -2916,6 +2916,10 @@
       let selectedTexts = new Set();
       let isSelecting = false;
       let selectionStart = null;
+      let preDragSelectedNodes = new Set();
+      let preDragSelectedEdges = new Set();
+      let preDragSelectedRects = new Set();
+      let preDragSelectedTexts = new Set();
       let selectionRect = null;
       let selectionBoxStyle = {
        fillColor: "#4fd1c5",
@@ -10348,6 +10352,11 @@
         clearSelection();
        }
        
+       preDragSelectedNodes = new Set(selectedNodes);
+       preDragSelectedEdges = new Set(selectedEdges);
+       preDragSelectedRects = new Set(selectedRects);
+       preDragSelectedTexts = new Set(selectedTexts);
+       
        if (!selectionRect || !selectionRect.parentNode) {
         selectionRect = document.createElementNS("http://www.w3.org/2000/svg", "rect");
         selectionRect.setAttribute("fill", selectionBoxStyle.fillColor);
@@ -10387,7 +10396,7 @@
         const nodeBox = { x: pos.x - halfSize, y: pos.y - halfSize, width: size, height: size };
         if (boxesIntersect(box, nodeBox)) {
          selectedNodes.add(nodeId);
-        } else if (!event.shiftKey) {
+        } else if (!preDragSelectedNodes.has(nodeId)) {
          selectedNodes.delete(nodeId);
         }
        });
@@ -10402,7 +10411,7 @@
           return;
          }
         }
-        if (!event.shiftKey) {
+        if (!preDragSelectedEdges.has(edge.id)) {
          selectedEdges.delete(edge.id);
         }
        });
@@ -10411,7 +10420,7 @@
         const rectBox = { x: rect.x, y: rect.y, width: rect.width, height: rect.height };
         if (boxesIntersect(box, rectBox)) {
          selectedRects.add(rect.id);
-        } else if (!event.shiftKey) {
+        } else if (!preDragSelectedRects.has(rect.id)) {
          selectedRects.delete(rect.id);
         }
        });
@@ -10421,7 +10430,7 @@
         const textBox = { x: text.x - 50, y: text.y - fontSize, width: 100, height: fontSize * 1.5 };
         if (boxesIntersect(box, textBox)) {
          selectedTexts.add(text.id);
-        } else if (!event.shiftKey) {
+        } else if (!preDragSelectedTexts.has(text.id)) {
          selectedTexts.delete(text.id);
         }
        });
